<resources>


        <string name="app_name">MyActivity3</string>
        <string name="choose">Choose an Option</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="login">Login</string>
        <string name="don_t_have_an_account">Don\'t have an account?</string>
        <string name="register">Register</string>
        <string name="forgot_your_password">Forgot your password?</string>
        <string name="reset_password">Reset Password</string>
        <string name="backToMainActivity">Home</string>
        <string name="class_directory">Class Directory</string>
        <string name="library_app">Library App</string>
        <string name="grocery_app">Grocery App</string>
        <string name="registered">Register</string>
        <string name="first_name">First Name</string>
        <string name="last_name">Last Name</string>
        <string name="e_mail">Email</string>
        <string name="pass_word">Password</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="log_in">Login</string>
        <string name="reg">REGISTER</string>
        <string name="back_to_main_activity">Back to Main Page</string>
        <string name="forgot_password">Forgot Password?</string>
        <string name="login_title">Login Verification</string>
        <string name="email_address">e_mail</string>
        <string name="enter_your_registered_email_address">Enter your registered email address</string>
        <string name="send">Send</string>
        <string name="forgot_send">Send</string>
        <string name="email_add">your email</string>
        <string name="email_ad">Email Address</string>
        <string name="not_registered_error_message">Not yet registered</string>
        <string name="tab_1">Tab 1</string>
        <string name="tab_2">Tab 2</string>
        <string name="tab_3">Tab 3</string>
        <string name="password_send_to_email">Password send to your %1$s!</string>
        <string name="password_display_message">Your password is: %s</string>
    <string name="forgot">Forgot Password</string>
        <string name="eMail">Email Address</string>
        <string name="SEND">Send</string>

</resources>