<?xml version="1.0" encoding="utf-8"?>
    <layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

                <!-- Title -->
                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/choose"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Class Directory Button -->
                <Button
                    android:id="@+id/class_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="69dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:hint="@string/class_directory"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_text_view" />

                <!-- Library App Button -->
                <Button
                    android:id="@+id/library_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:hint="@string/library_app"
                    app:layout_constraintEnd_toEndOf="@id/class_button"
                    app:layout_constraintStart_toStartOf="@id/class_button"
                    app:layout_constraintTop_toBottomOf="@id/class_button" />


                <!-- Grocery App Button -->
                <Button
                    android:id="@+id/grocery_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp"
                    android:hint="@string/grocery_app"
                    app:layout_constraintEnd_toEndOf="@id/class_button"
                    app:layout_constraintStart_toStartOf="@id/class_button"
                    app:layout_constraintTop_toBottomOf="@id/library_button" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </layout>

